@@ -1,32 +1,21 @@
 
 
-
-- [ ] Maven Plugin
-
-```xml
-        <plugin>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.22.1</version>
-          <configuration>
-            <argLine>--add-opens java.base/sun.security.ssl=ALL-UNNAMED</argLine>
-          </configuration>
-        </plugin>
+```
+cd ${ACTIVEMQ_HOME}
 ```
 
 ```
-vi ${ACTIVEMQ_HOME}/conf/activemq.xml
+${ACTIVEMQ_HOME}/bin/activemq console xbean:examples/conf/activemq-demo.xml 
 ```
 
-```xml
-<transportConnectors>
- 
-   ...
-   <transportConnector name="ssl" uri="ssl://localhost:61617?trace=true" 
-</transportConnectors>
+
 ```
-        
-```
-${ACTIVEMQ_HOME}/bin/activemq console xbean:src/main/resources/org/apache/activemq/book/ch4/activemq-ssl.xml 
+mvn \
+ --define javax.net.ssl.keyStore=${ACTIVEMQ_HOME}/conf/client.ks \
+ --define javax.net.ssl.keyStorePassword=password \
+ --define javax.net.ssl.trustStore=${ACTIVEMQ_HOME}/conf/client.ts \
+ exec:java --define exec.mainClass=org.apache.activemq.book.ch4.Consumer \
+           --define exec.args="ssl://localhost:61617 CSCO ORCL"
 ```
 
 ```
@@ -35,8 +24,10 @@ mvn \
  --define javax.net.ssl.keyStorePassword=password \
  --define javax.net.ssl.trustStore=${ACTIVEMQ_HOME}/conf/client.ts \
  exec:java --define exec.mainClass=org.apache.activemq.book.ch4.Publisher \
-           --define exec.args="ssl://localhost:61617 CSCO ORCL
+           --define exec.args="ssl://localhost:61617 CSCO ORCL"
 ```
+
+
 
 # References
 
